fixed black line behind img

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -32,11 +32,10 @@
 	width: 500px;
 }
 
-div {  
-    vertical-align: middle;  
-}
+
 
 img.center {
+    color: white;
     display:block;
     margin:auto;
 }
